test/fail/20-void_parameter_in_archetype_lambda_cmd.perk
fun main (): void {
    let f := (a: void): void {
        skip
    }
}